--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,12 @@
 {
   "firestore": {
     "database": "(default)",
-    "location": "asia-south2",
+    "location": "asia-south1",
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
