risk:firebase config added

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "env-cmd -f .env vite",
-    "build": "env-cmd -f .env tsc -b && vite build",
+    "build": "tsc -b && env-cmd -f .env.production vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
