--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 .env
+.env.production
 
 node_modules
 dist
 dist-ssr
 *.local
+.firebase
 
 # Editor directories and files
 .vscode/*
