--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "firebase": "^12.1.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.32.0",
     "@types/crypto-js": "^4.2.2",
     "@types/d3": "^7.4.3",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
